# pytorch-benchmarks

./: .pre-commit-config.yaml  pyproject.toml
tests/utils/: test_utils.py
utils/: flags.py  utils.py
